# amazon-kinesis-video-streams-producer-app

./: .gitmodules  CMakeLists.txt  Config  README.md  build.sh  script.sh
app/: KvsAacAudioVideoStreamingApp.c
kvs/: CMakeLists.txt  kvs.c  main.c
libkvs/: CMakeLists.txt
libz/: CMakeLists.txt
samples/: Makefile  Makefile.mbedtls  Makefile.openssl  Makefile.static  main  main.c
src/: main.c
